--- a/assets/sass/components/_code.scss
+++ b/assets/sass/components/_code.scss
@@ -14,7 +14,7 @@ samp {
 // Blocks of code
 pre {
 	display: block;
-	font-size: $pre-font-size;
+	font-size: 13px;
 	line-height: $base-line-height;
   word-break: break-all;
   word-wrap: break-word;
