--- a/assets/sass/components/_scaffolding.scss
+++ b/assets/sass/components/_scaffolding.scss
@@ -61,8 +61,8 @@ img {
 .hide{ display: none; }
 
 hr {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
   border: 0;
   border-top: 1px solid $hr-border;
 }
