--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,14 +19,13 @@
 @import "components/tables";
 @import "components/forms";
 @import "components/buttons";
+@import "components/flex-video";
 
 // Components
 @import "components/navbar";
 
 // Custom CSS
 @import "custom";
-
-
 
 
 
