--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -4,13 +4,13 @@
 
 
 .form-group{
-	margin-bottom: 15px;
+	margin-bottom: remCalc(15);
 }
 
 label {
 	display: inline-block;
 	max-width: 100%;
-	margin-bottom: 10px;
+	margin-bottom: remCalc(10);
 }
 
 input[type="text"],
@@ -65,7 +65,7 @@ select {
 	display: block;
 	width: 100%;
 	height: $input-height-base;
-	padding: 8px 12px;
+	padding: remCalc(8) remCalc(12);
 	font-size: $base-font-size;
 	line-height: $base-line-height;
 	border: 1px solid $input-border;
@@ -75,13 +75,13 @@ select {
 .radio, .checkbox {
 	position: relative;
 	display: block;
-	min-height: 20px;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	min-height: remCalc(20);
+	margin-top: remCalc(10);
+	margin-bottom: remCalc(10);
 }
 
 .radio label, .checkbox label {
-	padding-left: 20px;
+	padding-left: remCalc(20);
 	margin-bottom: 0;
 	font-weight: normal;
 	cursor: pointer;
@@ -92,8 +92,8 @@ select {
 .checkbox input[type=checkbox],
 .checkbox-inline input[type=checkbox] {
 	position: absolute;
-	margin-top: 5px;
-	margin-left: -20px;
+	margin-top: remCalc(5);
+	margin-left: remCalc(-20);
 }
 
 input[type="file"] {
