--- a/assets/sass/components/_variables.scss
+++ b/assets/sass/components/_variables.scss
@@ -119,6 +119,7 @@ $pre-border-color:            $gray-light !default;
 
 // grid variables
 $grid-columns: 12;
+$grid-gutter: (1.875em/2);
 $row-max-width: 71.25em;
 
 // breakpoints
