--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
    <meta name="viewport" content="width=device-width initial-scale=1" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- Favicon -->
-   <link rel="shortcut icon" href="{{ ASSET_PATH }}/assets/img/favicon.png">
+   <link rel="shortcut icon" href="/assets/img/favicon.png">
    <!-- Styles -->
-   <link rel="stylesheet" href="{{ ASSET_PATH }}/assets/css/style.css">
+   <link rel="stylesheet" href="/assets/css/style.css">
    <!-- Modernizr -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 	<!-- Canonical -->
@@ -56,6 +56,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write("<script src=\"assets/js/vendor/jquery.min.js\"><\/script>")</script>
 	<!-- Scripts -->
-	<script src="{{ ASSET_PATH }}/assets/js/main.js"></script>
+	<script src="/assets/js/main.js"></script>
 </body>
 </html>
