change lightcss to huleos framework

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 	<!-- Header -->
 	<header class="navbar">
 		<section class="navbar-header">
-			<a href="" class="nav-brand">LightCss</a>
+			<a href="" class="nav-brand">Huleos</a>
 			<a href="#" class="navbar-toggle">Menu</a>
 		</section>
 		
@@ -46,7 +46,7 @@
 	    <div class="row">
 	    <hr>
 	      <div class="col md-12">
-	        <p class="text-center">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} with help from <a href="http://jcmontenegro.me" target="_blank">Julio Cesar Montenegro</a> and <a href="https://huleos.github.io/lightcss/" target="_blank">LightCss</a>
+	        <p class="text-center">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} with help from <a href="http://jcmontenegro.me" target="_blank">Julio Cesar Montenegro</a> and <a href="http://huleos.github.io/" target="_blank">Huleos</a>
 	    		</p>
 	      </div>
 	    </div>
