--- a/assets/sass/components/_code.scss
+++ b/assets/sass/components/_code.scss
@@ -14,18 +14,24 @@ samp {
 // Blocks of code
 pre {
 	display: block;
-	font-size: 13px;
+	font-size: remCalc(13);
 	line-height: $base-line-height;
   word-break: break-all;
   word-wrap: break-word;
   color: $pre-color;
-  margin: 0 0 1rem;
+  margin: 0 0 remCalc(16);
   background-color: $pre-bg;
   border: 1px solid $pre-border-color;
-  padding: 0.5rem;
+  padding: remCalc(8);
   code{
     font-size: inherit;
     white-space: pre-wrap;
     border-radius: 0;
   }
+}
+
+code {
+    padding: remCalc(2) remCalc(5);
+    background-color: #f8f8f8;
+    border: 1px solid $gray-lighter;
 }
