--- a/assets/sass/components/_type.scss
+++ b/assets/sass/components/_type.scss
@@ -5,7 +5,7 @@
 p, h1, h2, h3, h4, h5, h6{ text-rendering: optimizeLegibility;}
 
 p {
-  margin: 0 0 0.75rem;
+  margin: 0 0 remCalc(12);
   font-size: $base-font-size;
 }
 
@@ -17,7 +17,7 @@ h5 { font-size: $font-size-h5; }
 h6 { font-size: $font-size-h6; }
 
 h1, h2, h3, h4, h5, h6{
-	margin-top: 0.2rem;
-	margin-bottom: 0.5rem;
+	margin-top: remCalc(3);
+	margin-bottom: remCalc(8);
 	font-weight: normal;
 }
